--- a/styles/_services.scss
+++ b/styles/_services.scss
@@ -432,7 +432,7 @@
 
       // bring the border up to the bottom of the text
       >* {
-        margin-bottom: -4px;
+        margin-bottom: -1px;
       }
 
       >h1 {
